Fix some letters being cut off vertically (#185)
By adding a line height

--- a/gfa-frontend/src/components/stop-list-item/style.css
+++ b/gfa-frontend/src/components/stop-list-item/style.css
@@ -1,7 +1,7 @@
 .stop {
   width: 100%;
   min-width: 100%;
-  height: 56px;
+  min-height: 56px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -14,6 +14,7 @@
 
 .stop .primary {
   font-size: 1.2em;
+  line-height: normal;
   overflow: hidden;
   text-overflow: ellipsis;
 }
